fix commited check

--- a/resources/templates/add_employee.html
+++ b/resources/templates/add_employee.html
@@ -145,7 +145,7 @@
                     >
                   </li>
                   <li>
-                    <a href="/employeeReport" onclick="return canuse()"
+                    <a href="/disReport" onclick="return canuse()"
                       >管理员工报告</a
                     >
                   </li>
