--- a/resources/templates/employee_report.html
+++ b/resources/templates/employee_report.html
@@ -110,7 +110,7 @@
 									<a href="/manageEmployee" onclick="return canuse()">维护员工信息</a>
 								</li>
 								<li>
-									<a href="/employeeReport" onclick="return canuse()">管理员工报告</a>
+									<a href="/disReport" onclick="return canuse()">管理员工报告</a>
 								</li>
 								<li>
 									<a href="#" onclick="pay()">工资结算发放</a>
