--- a/resources/templates/profile.html
+++ b/resources/templates/profile.html
@@ -139,7 +139,7 @@
 										<a href="/manageEmployee" onclick="return canuse()">维护员工信息</a>
 									</li>
 									<li>
-										<a href="/employeeReport" onclick="return canuse()">管理员工报告</a>
+										<a href="/disReport" onclick="return canuse()">管理员工报告</a>
 									</li>
 
                   <li>
