fix empty timecard

--- a/resources/templates/timecard.html
+++ b/resources/templates/timecard.html
@@ -307,7 +307,7 @@
 										</table>
 
 										<div>
-											<a href="add_timecard.html">
+											<a href="/resources/templates/add_timecard.html">
 												<i class="layui-icon layui-icon-addition"></i>
 											</a>
 											<form style="float: right;" method="post">
